--- a/src/app/components/paciente/paciente-form/paciente-form.component.html
+++ b/src/app/components/paciente/paciente-form/paciente-form.component.html
@@ -72,7 +72,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <!-- Teléfono del paciente -->
                     <div class="col-lg-4">
                         <div class="form-group">
@@ -119,7 +119,8 @@
                                 <span class="input-group-text"><i class="bi bi-calendar2-check-fill"></i></span>
                                 <input id="fecha-nacimiento-paciente" name="fecha-nacimiento-paciente" type="date"
                                     class="form-control" [(ngModel)]="paciente.fechaNacimiento" ngModel
-                                    #fechaNacimientoPaciente="ngModel" required>
+                                    #fechaNacimientoPaciente="ngModel" required
+                                    [ngStyle]="fechaNacimientoPaciente.value > fechaActual ? {'border': '2px solid red'} : {}">
 
                                 <!-- Manejo de errores -->
                                 <div *ngIf="fechaNacimientoPaciente?.invalid && (fechaNacimientoPaciente?.touched || fechaNacimientoPaciente?.dirty)"
@@ -128,6 +129,12 @@
                                         <small class="text-danger">Se debe ingresar la fecha de nacimiento del
                                             paciente!</small>
                                     </div>
+                                </div>
+                                <div *ngIf="(fechaNacimientoPaciente?.touched || fechaNacimientoPaciente?.dirty) && fechaNacimientoPaciente.value > fechaActual"
+                                    class="col-lg-12">
+                                    <small class="text-danger">La fecha de nacimiento del paciente no puede ser una
+                                        fecha
+                                        futura.</small>
                                 </div>
                             </div>
                         </div>
@@ -281,7 +288,8 @@
                             <label for="grupo-familiar-paciente">Grupo familiar del paciente:</label>
                             <div class="input-group">
                                 <span class="input-group-text"><i class="bi bi-people-fill"></i></span>
-                                <textarea name="grupo-familiar-paciente" id="grupo-familiar-paciente" cols="12" rows="3"
+                                <textarea [ngStyle]="!familiaNuclear.value?.trim() ? {'border': '2px solid red'} : {}"
+                                    name="grupo-familiar-paciente" id="grupo-familiar-paciente" cols="12" rows="3"
                                     class="form-control" ngModel [(ngModel)]="paciente.familiaNuclear"
                                     #familiaNuclear="ngModel" required maxlength="1000"></textarea>
                                 <span class="input-group-text">
@@ -322,12 +330,14 @@
                         <!-- Guardar cambios -->
                         <button [disabled]="nombrePaciente.invalid || apellidoPaciente.invalid || telefonoPaciente.invalid 
 || fechaNacimientoPaciente.invalid || ocupacionPaciente.invalid || institucionPaciente.invalid
-|| afiliacionSaludPaciente.invalid || estadoCivilPaciente.invalid || familiaNuclear.invalid || emailPaciente.invalid" type="submit"
+|| afiliacionSaludPaciente.invalid || estadoCivilPaciente.invalid || familiaNuclear.invalid || emailPaciente.invalid 
+|| fechaNacimientoPaciente.value > fechaActual || !familiaNuclear.value?.trim()" type="submit"
                             class="btn btn-primary">Guardar cambios</button>
                     </div>
                     <div class="col-lg-5 text-right">
                         <!-- Cancelar operación/volver -->
-                        <button (click)="back(nombrePaciente.value, apellidoPaciente.value, telefonoPaciente.value, 
+                        <button
+                            (click)="back(nombrePaciente.value, apellidoPaciente.value, telefonoPaciente.value, 
                             fechaNacimientoPaciente.value, ocupacionPaciente.value, institucionPaciente.value, 
                             afiliacionSaludPaciente.value, estadoCivilPaciente.value, familiaNuclear.value, emailPaciente.value)"
                             class="btn btn-primary" type="button">Volver</button>
